--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "html-to-image": "^1.10.8",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "nanoid": "^4.0.0",
     "next": "12.3.0",
     "next-i18next": "^12.0.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-devicons": "^2.14.0",
+    "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
+    "react-social-icons": "^5.14.0"
   },
   "devDependencies": {
     "@types/node": "18.7.16",
