--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "12.3.0",
     "next-i18next": "^12.0.1",
     "react": "18.2.0",
+    "react-country-flag": "^3.0.2",
     "react-devicons": "^2.14.0",
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
