--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint -- --dir src"
   },
   "dependencies": {
     "html-to-image": "^1.10.8",
